feat: 작업 폴더를 home 디렉터리로 변경, 작업 후 결과 파일 및 패치 파일을 바탕화면으로 이동

--- a/bin/settings/meta.yaml
+++ b/bin/settings/meta.yaml
@@ -1,8 +1,8 @@
 path:
-    bin: "../bin"
     driver: "../bin/exe/chromedriver.exe"
-    patchfile: "../bin/patchfiles"
     data: "../bin/data"
+    # patchfile: "../bin/patchfiles"
+    # bin: "../bin"
 
 driver_options:
     - "--disable-popup-blocking"
