feat: logging 기능 추가, 일부 코드 단순화

--- a/bin/settings/meta.yaml
+++ b/bin/settings/meta.yaml
@@ -1,8 +1,6 @@
 path:
-    driver: "../bin/exe/chromedriver.exe"
-    data: "../bin/data"
-    # patchfile: "../bin/patchfiles"
-    # bin: "../bin"
+    driver: "./exe/chromedriver.exe"
+    data: "./data"
 
 driver_options:
     - "--disable-popup-blocking"
