feat: typing, 프로그램 정상 종료 시 패치파일 폴더 복사 후 삭제 로직 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 .idea/*
 .venv/*
+venv/*
 ./*/__pycache__/*
 ./back_office/crwaling/patchfiles
 ./build/*
 ./build/main/*
 ./bin/data/*.xlsx
-
+.vscode/*
 *.log
 *.csv
 *.pyc
